# oria

./: .gitignore
backend/: .env  Dockerfile  README.md  debug_app.py  pyproject.toml  requirements.txt
backend/oria_backend/: .gitignore  app.py  config.py  logger_utils.py  main.py  utils.py
backend/oria_backend/data_transformers/: consts.py  models.py  route.py  service.py
backend/oria_backend/data_transformers/essentia_models/: mtg_jamendo_moodtheme-discogs_label_embeddings-effnet-1.pb
backend/oria_backend/data_transformers/prompts/: image_to_embeddings.py  song_to_embeddings.py
backend/oria_backend/songs/: models.py  mongo.py  route.py  service.py
crawler/: README.md  config.yaml  main.py  pyproject.toml
crawler/crawler/: __init__.py  crawler.py  lyrics_handler.py  youtube_crawler.py
crawler/crawler/data/: fblabels_to_gtranslate.json  patterns.json
crawler/models/: __init__.py  song.py
crawler/services/: song_service.py
crawler/utils/: db.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: FlowDiagram.css  FlowDiagram.js  Header.js  MainLayout.js  Modal.js  MusicAnalysisLoader.css  MusicAnalysisLoader.js  ResultsModal.css  ResultsModal.js
frontend/src/pages/: AboutPage.js  ResultsPage.js  UploadPage.js
scripts/: build_prod.sh  build_test.sh
