[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "einops>=0.8.0",
  "fastapi>=0.115.6",
  "pydantic>=2.10.5",
  "pydantic-settings>=2.7.1",
  "tensorflow>=2.18.0",
  "torch>=2.5.1",
  "transformers>=4.48.1",
  "uvicorn>=0.34.0",
]
