[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "einops>=0.8.0",

  # macOS: grab the prebuilt TF-enabled dev wheels
  "essentia>=2.1b6.dev1177; sys_platform=='darwin'",
  "essentia-tensorflow>=2.1b6.dev1177; sys_platform=='darwin'",

  # Linux: build from Git (will compile the library + TF wrappers)
  "essentia==2.1b6.dev1110; sys_platform=='linux'",
  "essentia-tensorflow==2.1b6.dev1110; sys_platform=='linux'",

  "fastapi>=0.115.6",
  "googletrans>=4.0.2",
  "loguru>=0.7.3",
  "motor>=3.7.0",
  "numpy<2.0",
  "pillow>=11.1.0",
  "pydantic>=2.10.5",
  "pydantic-settings>=2.7.1",
  "python-multipart>=0.0.20",
  "scikit-learn>=1.5.0",
  "scipy>=1.15.1",
  "sentencepiece>=0.2.0",
  "tensorflow>=2.18.0",
  "tf-keras>=2.18.0",
  "tiktoken>=0.9.0",
  "torch>=2.5.1",
  "transformers>=4.48.1",
  "uvicorn>=0.34.0",
]