[project]
name = "crawler"
version = "0.1.0"
description = "Oria song Crawler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "beanie>=1.29.0",
    "dotenv>=0.9.9",
    "fasttext-wheel>=0.9.2",
    "googletrans>=4.0.2",
    "huggingface-hub>=0.30.2",
    "lyricsgenius>=3.5.1",
    "numpy==1.26.4",
    "pyyaml>=6.0.2",
    "wheel>=0.45.1",
    "yt-dlp>=2025.3.31",
]
